--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         </ul>
 
-        <a href="#stats" class="scroll-down">Scroll</a>
+<!--         <a href="#stats" class="scroll-down">Scroll</a> -->
 
       </section>
 
