--- a/index.html
+++ b/index.html
@@ -720,7 +720,8 @@
                 <h3 class="h4 contact-item-title">Address:</h3>
 
                 <address class="contact-info">
-                  941 Saqrqorish Road, alandalos, grnata, wa 47122-4194
+                  CAPITOL PARK RESIDENCE, 
+                  Jl. Salemba Raya No.16 Jakarta Pusat 10430.
                 </address>
               </div>
 
