--- a/porto-1.html
+++ b/porto-1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moty - personal portfolio</title>
+  <title>Portofolio 1</title>
 
   <!-- 
     - favicon
@@ -22,9 +22,7 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap" rel="stylesheet">
 </head>
 
 <body id="top" class="dark_theme">
@@ -41,16 +39,9 @@
       </h1>
 
       <div class="navbar-actions">
-
-        <!-- <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select> -->
-
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
         </button>
-
       </div>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" title="Toggle Menu" data-nav-toggle-btn>
@@ -58,15 +49,8 @@
         <span class="two"></span>
         <span class="three"></span>
       </button>
-
-      
-
     </div>
   </header>
-
-
-
-
 
   <main>
     <article class="container">
@@ -76,155 +60,47 @@
       -->
 
       <section class="hero" id="home">
-
-        <div><h2></h2></div>
-        <div class="hero-content">
-
-          <h2 class="h2 hero-title">PORTOFOLIO 1</h2>
-
-          <a href="./index.html" class="btn btn-primary">BACK</a>
-
+        <div>
+          <h2></h2>
         </div>
-
-        <ul class="hero-social-list">
-
-          <!-- <li>
-            <a href="#" class="hero-social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-
-              <div class="tooltip">Facebook</div>
-            </a>
-          </li> -->
-
-          <!-- <li>
-            <a href="#" class="hero-social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-
-              <div class="tooltip">Twitter</div>
-            </a>
-          </li> -->
-
-          <li>
-            <a href="https://www.linkedin.com/in/stimotyss/" class="hero-social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-
-              <div class="tooltip">Linkedin</div>
-            </a>
-          </li>
-
-        </ul>
-
-<!--         <a href="#stats" class="scroll-down">Scroll</a> -->
-
+        <div class="hero-content">
+          <h2 class="h2 hero-title">Luxura Purchase Behaviour Analysis</h2>
+          <a href="./index.html" class="btn btn-primary">BACK</a>
+        </div>
       </section>
-
-
-
-
-
-      <!-- 
-        - #STATS
-      -->
-
-      <!-- <section class="stats" id="stats">
-        <ul class="stats-list">
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-1.png" alt="Badge icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                12+ <strong>Years of Experience</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-2.png" alt="Checkmark icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                230+ <strong>Completed Projects</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-3.png" alt="Peoples rating icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                95+ <strong>Happy Clients</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li> -->
-
-        </ul>
-      </section>
-
-
-
-
 
       <!-- 
         - #ABOUT
       -->
 
-      <section class="about" id="about">
-
-        <figure class="about-banner">
-          <img src="./assets/images/about-banner.png" alt="A man in a alice blue shirt with a thinking expression"
-            class="w-100">
-        </figure>
-
-        <div class="about-content section-content">
-
-          <!-- <p class="section-subtitle">About me</p> -->
-
-          <!-- <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2> -->
-
-          <p class="section-text">
-            I'm a seasoned computer engineer with over three years of experience in software and data engineering. I specialize in analyzing and developing web-based applications, managing databases, and optimizing data pipelines.</br>
-            Recently, I completed the Full-Stack Data Analytics Program at Revou, enhancing my skills in Excel, SQL, Tableau, and Google Data Studio. I have a passion for using data analytics to solve complex challenges and help organizations make informed decisions.</br>
-            What sets me apart is not just my technical expertise but also my commitment to staying updated on industry advancements. I look forward to contributing my skills and experience to help businesses thrive and achieve their goals.
+      <section class="portofolio" id="portofolio">
+        <div class="portofolio-content">
+          <h1 class="h2">Luxura Purchase Behaviour Analysis</h1>
+          <h2 class="hinfo">Skillset: Spreadsheet, Statistic, EDA</h2>
+          <p></p>
+          <p class="portofolio-text">
+            Luxura is facing the core business problem of ineffective marketing strategies in ecommerce. The company
+            needs to identify the current sales performance of each brand and deliver insights and recommendations to
+            help improve sales performance.
           </p>
-
-          <!-- <div class="btn-group">
-            <button class="btn btn-secondary">Hire me</button>
-
-            <button class="btn btn-primary">Download cv</button>
-          </div> -->
-
+          <p class="portofolio-text">What is the promotion strategy that aligns with the current condition?</p>
+          <p></p>
+          <p></p>
+          <p class="portofolio-text">Based on the histogram, Adibi has relatively the lowest promotion, with most of the promotion around 1-2%.
+          </p>
+          <p class="portofolio-text"><b>Recommendation</b>
+          </p>
+          <p class="portofolio-text">We learn that Adibi has the lowest amount spent, the lowest promotion rate. Meanwhile, in buyer aspects, we found that users who are not married and have middle to high income have the highest purchase quantity & value, which makes them potential users. Hence, the recommendations are:
+          <ol class="portofolio-text">
+            <li> 1. Adibi should increase its promotion. Adibi might have the lowest value of orders because it spends low on promotion. Compared to Balena, which has the highest promotion rate, Balena also has a higher purchase value. Hence, partnering with Luxura could be one of the solutions to increase promotion.</li>
+            <li></li>
+            <li> 2. Spend personalized services & assistantship for “Not Married” & “Middle to High Income” users, such as special vouchers, specific campaigns, etc., because they might spend more to purchase products.</li>
+          </ol>
+        </p>
         </div>
-
-      
-
       </section>
-
     </article>
   </main>
-
-
-
-
 
   <!-- 
     - #FOOTER
@@ -232,19 +108,13 @@
 
   <footer class="footer">
     <div class="container">
-
       <p class="h1 logo">
         <a href="#">
           Timoty<span>Sean</span>
         </a>
       </p>
-
     </div>
   </footer>
-
-
-
-
 
   <!-- 
     - #GO TO TOP
@@ -253,10 +123,6 @@
   <a href="#top" class="go-top" data-go-top title="Go to Top">
     <ion-icon name="arrow-up"></ion-icon>
   </a>
-
-
-
-
 
   <!-- 
     - custom js link
