--- a/porto-1.html
+++ b/porto-1.html
@@ -85,6 +85,7 @@
           </p>
           <p class="portofolio-text">What is the promotion strategy that aligns with the current condition?</p>
           <p><img src="./assets/images/p11.png" class="w-100" alt="image p 1 1"></p>
+          <p class="portofolio-text">Those analysis indicates that users might be interested mostly on Celinna.</p>
           <p><img src="./assets/images/p12.png" class="w-100" alt="image p 1 2"></p>
           <p class="portofolio-text">Based on the histogram, Adibi has relatively the lowest promotion, with most of the promotion around 1-2%.
           </p>
