--- a/porto-1.html
+++ b/porto-1.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portofolio 1</title>
 
+  
   <!-- 
     - favicon
   -->
@@ -15,7 +16,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/styleporto.css">
 
   <!-- 
     - google font link
@@ -84,18 +85,17 @@
             help improve sales performance.
           </p>
           <p class="portofolio-text">What is the promotion strategy that aligns with the current condition?</p>
-          <p><img src="./assets/images/p11.png" class="w-100" alt="image p 1 1"></p>
-          <p class="portofolio-text">Those analysis indicates that users might be interested mostly on Celinna.</p>
-          <p><img src="./assets/images/p12.png" class="w-100" alt="image p 1 2"></p>
+          <p></p>
+          <p></p>
           <p class="portofolio-text">Based on the histogram, Adibi has relatively the lowest promotion, with most of the promotion around 1-2%.
           </p>
           <p class="portofolio-text"><b>Recommendation</b>
           </p>
           <p class="portofolio-text">We learn that Adibi has the lowest amount spent, the lowest promotion rate. Meanwhile, in buyer aspects, we found that users who are not married and have middle to high income have the highest purchase quantity & value, which makes them potential users. Hence, the recommendations are:
           <ol class="portofolio-text">
-            <li> 1. Adibi should increase its promotion. Adibi might have the lowest value of orders because it spends low on promotion. Compared to Balena, which has the highest promotion rate, Balena also has a higher purchase value. Hence, partnering with Luxura could be one of the solutions to increase promotion.</li>
+            <li>Adibi should increase its promotion. Adibi might have the lowest value of orders because it spends low on promotion. Compared to Balena, which has the highest promotion rate, Balena also has a higher purchase value. Hence, partnering with Luxura could be one of the solutions to increase promotion.</li>
             <li></li>
-            <li> 2. Spend personalized services & assistantship for “Not Married” & “Middle to High Income” users, such as special vouchers, specific campaigns, etc., because they might spend more to purchase products.</li>
+            <li>Spend personalized services & assistantship for “Not Married” & “Middle to High Income” users, such as special vouchers, specific campaigns, etc., because they might spend more to purchase products.</li>
           </ol>
         </p>
         </div>
