--- a/porto-1.html
+++ b/porto-1.html
@@ -86,7 +86,7 @@
           </p>
           <p class="portofolio-text">What is the promotion strategy that aligns with the current condition?</p>
           <p><img src="./assets/images/p11.png" alt="p11"></p>
-          <p>Those analysis indicates that users might be interested mostly on Celinna.</p>
+          <p class="portofolio-text">Those analysis indicates that users might be interested mostly on Celinna.</p>
           <p><img src="./assets/images/p11.png" alt="p12"></p>
           <p class="portofolio-text">Based on the histogram, Adibi has relatively the lowest promotion, with most of the promotion around 1-2%.
           </p>
