--- a/porto-1.html
+++ b/porto-1.html
@@ -93,7 +93,7 @@
           <p class="portofolio-text"><b>Recommendation</b>
           </p>
           <p class="portofolio-text">We learn that Adibi has the lowest amount spent, the lowest promotion rate. Meanwhile, in buyer aspects, we found that users who are not married and have middle to high income have the highest purchase quantity & value, which makes them potential users. Hence, the recommendations are:
-          <ol class="portofolio-text">
+          <ol class="portofolio-list1">
             <li>Adibi should increase its promotion. Adibi might have the lowest value of orders because it spends low on promotion. Compared to Balena, which has the highest promotion rate, Balena also has a higher purchase value. Hence, partnering with Luxura could be one of the solutions to increase promotion.</li>
             <li>Spend personalized services & assistantship for “Not Married” & “Middle to High Income” users, such as special vouchers, specific campaigns, etc., because they might spend more to purchase products.</li>
           </ol>
