--- a/porto-2.html
+++ b/porto-2.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moty - personal portfolio</title>
+  <title>Portofolio 2</title>
 
+  
   <!-- 
     - favicon
   -->
@@ -15,16 +16,14 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/styleporto.css">
 
   <!-- 
     - google font link
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap" rel="stylesheet">
 </head>
 
 <body id="top" class="dark_theme">
@@ -41,16 +40,9 @@
       </h1>
 
       <div class="navbar-actions">
-
-        <!-- <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select> -->
-
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
         </button>
-
       </div>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" title="Toggle Menu" data-nav-toggle-btn>
@@ -58,15 +50,8 @@
         <span class="two"></span>
         <span class="three"></span>
       </button>
-
-      
-
     </div>
   </header>
-
-
-
-
 
   <main>
     <article class="container">
@@ -76,155 +61,67 @@
       -->
 
       <section class="hero" id="home">
-
-        <div><h2></h2></div>
-        <div class="hero-content">
-
-          <h2 class="h2 hero-title">PORTOFOLIO 2</h2>
-
-          <a href="./index.html" class="btn btn-primary">BACK</a>
-
+        <div>
+          <h2></h2>
         </div>
-
-        <ul class="hero-social-list">
-
-          <!-- <li>
-            <a href="#" class="hero-social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-
-              <div class="tooltip">Facebook</div>
-            </a>
-          </li> -->
-
-          <!-- <li>
-            <a href="#" class="hero-social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-
-              <div class="tooltip">Twitter</div>
-            </a>
-          </li> -->
-
-          <li>
-            <a href="https://www.linkedin.com/in/stimotyss/" class="hero-social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-
-              <div class="tooltip">Linkedin</div>
-            </a>
-          </li>
-
-        </ul>
-
-<!--         <a href="#stats" class="scroll-down">Scroll</a> -->
-
+        <div class="hero-content">
+          <h2 class="h2 hero-title">The Look E-Commerce Analysis</h2>
+          <a href="./index.html" class="btn btn-primary">BACK</a>
+        </div>
       </section>
-
-
-
-
-
-      <!-- 
-        - #STATS
-      -->
-
-      <!-- <section class="stats" id="stats">
-        <ul class="stats-list">
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-1.png" alt="Badge icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                12+ <strong>Years of Experience</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-2.png" alt="Checkmark icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                230+ <strong>Completed Projects</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-3.png" alt="Peoples rating icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                95+ <strong>Happy Clients</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li> -->
-
-        </ul>
-      </section>
-
-
-
-
 
       <!-- 
         - #ABOUT
       -->
 
-      <section class="about" id="about">
-
-        <figure class="about-banner">
-          <img src="./assets/images/about-banner.png" alt="A man in a alice blue shirt with a thinking expression"
-            class="w-100">
-        </figure>
-
-        <div class="about-content section-content">
-
-          <!-- <p class="section-subtitle">About me</p> -->
-
-          <!-- <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2> -->
-
-          <p class="section-text">
-            I'm a seasoned computer engineer with over three years of experience in software and data engineering. I specialize in analyzing and developing web-based applications, managing databases, and optimizing data pipelines.</br>
-            Recently, I completed the Full-Stack Data Analytics Program at Revou, enhancing my skills in Excel, SQL, Tableau, and Google Data Studio. I have a passion for using data analytics to solve complex challenges and help organizations make informed decisions.</br>
-            What sets me apart is not just my technical expertise but also my commitment to staying updated on industry advancements. I look forward to contributing my skills and experience to help businesses thrive and achieve their goals.
+      <section class="portofolio" id="portofolio">
+        <div class="portofolio-content">
+          <h1 class="h2">The Look E-Commerce Analysis</h1>
+          <h2 class="hinfo">Skillset: SQL, Google Data Studio</h2>
+          <p></p>
+          <p class="portofolio-list0">The look Commerce is a new developed start up, as a new developed start up, the main goals of the look commerce is to monitori user and order activities.</p>
+          <p class="portofolio-text">In order to have a good monitoring result the look commerce wanted to do an end to end analysis starting from order and user growth and trace those user activities thorugh months using cohort analysis.
+          <ul class="portofolio-list1">
+            <li>How many total orders are completed each month?</li>
+            <li>How many average order each month?</li>
+            <li>Get top 5 least and most profitable product over all time</li>
+          </ul>
           </p>
-
-          <!-- <div class="btn-group">
-            <button class="btn btn-secondary">Hire me</button>
-
-            <button class="btn btn-primary">Download cv</button>
-          </div> -->
-
+          <p class="portofolio-text">The purpose of this is to provide an analysis of the sales growth of e-commerce clothing</p>
+          <p><img src="./assets/images/p21" alt="p11"></p>
+          <p class="portofolio-text">It can be seen that the total completed orders grew significantly every month from 2019-2020</p>
+          <p><img src="./assets/images/p22" alt="p12"></p>
+          <p class="portofolio-text">The chart above shows that the highest average order occured in March 2019 and the lowest average order in November 2019</p>
+          <p><img src="./assets/images/p23" alt="p13"></p>
+          <p class="portofolio-text">With the exception of sweaters, which show a decrease from July to August 2022, as well as the Swim and Sleep & Lounge categories decreasing from June to July 2022, almost all product categories show an increase in profit from June to August 2022.
+          </p>
+          <p><img src="./assets/images/p24" alt="p14"></p>
+          <p class="portofolio-list0">The data provided represents the percentage top 5 unprofitable product for various products. According to the information given, classic tear drop mirror lens aviator sunglasses 32,5%  being the least purchased product</p>
+          <p class="portofolio-text">These percentages provide insight into which products are unprofitable product the most and how they contribute to the overall sales of the company.</p>
+          <p><img src="./assets/images/p25" alt="p15"></p>
+          <p class="portofolio-list0">The data provided represents the percentage top 5 profitble product for various products. According to the information given, Air Jordan Dominate Shorts Mens make up 21.7% of total sales and the lowest Darla products make up 17.35% of total sales.</p>
+          <p class="portofolio-text">These percentages provide insight into which products are selling the most and how they contribute to the overall sales of the company.</p>
+          <p><img src="./assets/images/p26" alt="p16"></p>
+          <p class="portofolio-text"><b>Insight &Recommendation</b>
+          </p>
+          <ul class="portofolio-list0">
+          <li>The total number of new users slightly increased from 2953 in January 2022 to 4953 in the beginning of October 2022.</li>
+          <li>In September 2022, the retention rate decrease to 7.57% from the previous month caused by incomplete dataset in October 2022.</li>
+          <li>August 2022 became the highest retention rate in the first month at 18.60%.</li>
+          <li>Out of all of the new users during this time range (41787 users), 9.66% users are retained on month 1 that means about 90% of customers do not place an order after the first month.</li>
+          <li>TheLook Ecommerce should increase user engagement and retention by sending notifications about products they've searched for. Include a statement that purchasing the product now will result in cashback or points.</li>
+          <li>To increase sales for products in the active category with clearance sales during high seasons like summer holidays or payday sales.</li>
+          <li>Another suggestion for increasing active category sales is to combine it with the best-selling product.</li>
+        </ul>
+        <p><img src="./assets/images/p27" alt="p17"></p>
+        <ul class="portofolio-list0">
+          <li>    On average, the top 3 highest categories of inventory growth (per month) is Clothing Sets (90.63%), Underwear (75.08%), and Jumpsuits & Rompers (52.55%) during January 2019 till April 2022.</li>
+          <li>During January 2019 till April 2022, the category of clothing sets has become the best-selling product on The Look Ecommerce and the product that did not sell well was in the Active category with 24.26%. More promotion and campaign needs to be done for products whose growth is below 30%.</li>
+        </ul>
         </div>
-
-      
-
       </section>
-
     </article>
   </main>
-
-
-
-
 
   <!-- 
     - #FOOTER
@@ -232,19 +129,13 @@
 
   <footer class="footer">
     <div class="container">
-
       <p class="h1 logo">
         <a href="#">
           Timoty<span>Sean</span>
         </a>
       </p>
-
     </div>
   </footer>
-
-
-
-
 
   <!-- 
     - #GO TO TOP
@@ -253,10 +144,6 @@
   <a href="#top" class="go-top" data-go-top title="Go to Top">
     <ion-icon name="arrow-up"></ion-icon>
   </a>
-
-
-
-
 
   <!-- 
     - custom js link
