--- a/porto-2.html
+++ b/porto-2.html
@@ -88,20 +88,20 @@
           </ul>
           </p>
           <p class="portofolio-text">The purpose of this is to provide an analysis of the sales growth of e-commerce clothing</p>
-          <p><img src="./assets/images/p21" alt="p11"></p>
+          <p><img src="./assets/images/p21.png" alt="p11"></p>
           <p class="portofolio-text">It can be seen that the total completed orders grew significantly every month from 2019-2020</p>
-          <p><img src="./assets/images/p22" alt="p12"></p>
+          <p><img src="./assets/images/p22.png" alt="p12"></p>
           <p class="portofolio-text">The chart above shows that the highest average order occured in March 2019 and the lowest average order in November 2019</p>
-          <p><img src="./assets/images/p23" alt="p13"></p>
+          <p><img src="./assets/images/p23.png" alt="p13"></p>
           <p class="portofolio-text">With the exception of sweaters, which show a decrease from July to August 2022, as well as the Swim and Sleep & Lounge categories decreasing from June to July 2022, almost all product categories show an increase in profit from June to August 2022.
           </p>
-          <p><img src="./assets/images/p24" alt="p14"></p>
+          <p><img src="./assets/images/p24.png" alt="p14"></p>
           <p class="portofolio-list0">The data provided represents the percentage top 5 unprofitable product for various products. According to the information given, classic tear drop mirror lens aviator sunglasses 32,5%  being the least purchased product</p>
           <p class="portofolio-text">These percentages provide insight into which products are unprofitable product the most and how they contribute to the overall sales of the company.</p>
-          <p><img src="./assets/images/p25" alt="p15"></p>
+          <p><img src="./assets/images/p25.png" alt="p15"></p>
           <p class="portofolio-list0">The data provided represents the percentage top 5 profitble product for various products. According to the information given, Air Jordan Dominate Shorts Mens make up 21.7% of total sales and the lowest Darla products make up 17.35% of total sales.</p>
           <p class="portofolio-text">These percentages provide insight into which products are selling the most and how they contribute to the overall sales of the company.</p>
-          <p><img src="./assets/images/p26" alt="p16"></p>
+          <p><img src="./assets/images/p26.png" alt="p16"></p>
           <p class="portofolio-text"><b>Insight &Recommendation</b>
           </p>
           <ul class="portofolio-list0">
@@ -113,7 +113,7 @@
           <li>To increase sales for products in the active category with clearance sales during high seasons like summer holidays or payday sales.</li>
           <li>Another suggestion for increasing active category sales is to combine it with the best-selling product.</li>
         </ul>
-        <p><img src="./assets/images/p27" alt="p17"></p>
+        <p><img src="./assets/images/p27.png" alt="p17"></p>
         <ul class="portofolio-list0">
           <li>    On average, the top 3 highest categories of inventory growth (per month) is Clothing Sets (90.63%), Underwear (75.08%), and Jumpsuits & Rompers (52.55%) during January 2019 till April 2022.</li>
           <li>During January 2019 till April 2022, the category of clothing sets has become the best-selling product on The Look Ecommerce and the product that did not sell well was in the Active category with 24.26%. More promotion and campaign needs to be done for products whose growth is below 30%.</li>
