--- a/porto-2.html
+++ b/porto-2.html
@@ -101,7 +101,7 @@
           <p><img src="./assets/images/p25.png" alt="p15"></p>
           <p class="portofolio-list0">The data provided represents the percentage top 5 profitble product for various products. According to the information given, Air Jordan Dominate Shorts Mens make up 21.7% of total sales and the lowest Darla products make up 17.35% of total sales.</p>
           <p class="portofolio-text">These percentages provide insight into which products are selling the most and how they contribute to the overall sales of the company.</p>
-          <p><img src="./assets/images/p26.png" alt="p16"></p>
+          <p><img src="./assets/images/p26.png" alt="p16" width="100%"></p>
           <p class="portofolio-text"><b>Insight &Recommendation</b>
           </p>
           <ul class="portofolio-list0">
