--- a/porto-5.html
+++ b/porto-5.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moty - personal portfolio</title>
+  <title>Portofolio 3</title>
 
+  
   <!-- 
     - favicon
   -->
@@ -15,16 +16,14 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/styleporto.css">
 
   <!-- 
     - google font link
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap" rel="stylesheet">
 </head>
 
 <body id="top" class="dark_theme">
@@ -41,16 +40,9 @@
       </h1>
 
       <div class="navbar-actions">
-
-        <!-- <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select> -->
-
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
         </button>
-
       </div>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" title="Toggle Menu" data-nav-toggle-btn>
@@ -58,15 +50,8 @@
         <span class="two"></span>
         <span class="three"></span>
       </button>
-
-      
-
     </div>
   </header>
-
-
-
-
 
   <main>
     <article class="container">
@@ -76,175 +61,60 @@
       -->
 
       <section class="hero" id="home">
-
-        <div><h2></h2></div>
-        <div class="hero-content">
-
-          <h2 class="h2 hero-title">PORTOFOLIO 5</h2>
-
-          <a href="./index.html" class="btn btn-primary">BACK</a>
-
+        <div>
+          <h2></h2>
         </div>
-
-        <ul class="hero-social-list">
-
-          <!-- <li>
-            <a href="#" class="hero-social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-
-              <div class="tooltip">Facebook</div>
-            </a>
-          </li> -->
-
-          <!-- <li>
-            <a href="#" class="hero-social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-
-              <div class="tooltip">Twitter</div>
-            </a>
-          </li> -->
-
-          <li>
-            <a href="https://www.linkedin.com/in/stimotyss/" class="hero-social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-
-              <div class="tooltip">Linkedin</div>
-            </a>
-          </li>
-
-        </ul>
-
-<!--         <a href="#stats" class="scroll-down">Scroll</a> -->
-
+        <div class="hero-content">
+          <h2 class="h2 hero-title">Revobank Customer Analysis</h2>
+          <a href="./index.html" class="btn btn-primary">BACK</a>
+        </div>
       </section>
-
-
-
-
-
-      <!-- 
-        - #STATS
-      -->
-
-      <!-- <section class="stats" id="stats">
-        <ul class="stats-list">
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-1.png" alt="Badge icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                12+ <strong>Years of Experience</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-2.png" alt="Checkmark icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                230+ <strong>Completed Projects</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="stats-card">
-
-              <div class="card-icon">
-                <img src="./assets/images/stats-card_icon-3.png" alt="Peoples rating icon">
-              </div>
-
-              <h2 class="h2 card-title">
-                95+ <strong>Happy Clients</strong>
-              </h2>
-
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-
-            </a>
-          </li> -->
-
-        </ul>
-      </section>
-
-
-
-
 
       <!-- 
         - #ABOUT
       -->
 
-      <section class="about" id="about">
-
-        <figure class="about-banner">
-          <img src="./assets/images/about-banner.png" alt="A man in a alice blue shirt with a thinking expression"
-            class="w-100">
-        </figure>
-
-        <div class="about-content section-content">
-
-          <!-- <p class="section-subtitle">About me</p> -->
-
-          <!-- <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2> -->
-
-          <p class="section-text">
-            I'm a seasoned computer engineer with over three years of experience in software and data engineering. I specialize in analyzing and developing web-based applications, managing databases, and optimizing data pipelines.</br>
-            Recently, I completed the Full-Stack Data Analytics Program at Revou, enhancing my skills in Excel, SQL, Tableau, and Google Data Studio. I have a passion for using data analytics to solve complex challenges and help organizations make informed decisions.</br>
-            What sets me apart is not just my technical expertise but also my commitment to staying updated on industry advancements. I look forward to contributing my skills and experience to help businesses thrive and achieve their goals.
+      <section class="portofolio" id="portofolio">
+        <div class="portofolio-content">
+          <h1 class="h2">Revobank Customer Analysis</h1>
+          <h2 class="hinfo">Skillset: Python, Customer Segmentation</h2>
+          <p class="portofolio-list0">RevouBank is a bank that based in Europe. They provide a Credit Card that partnering with other company, and one them is RevoShop.</p>
+          <p class="portofolio-text">RevoShop is an ecommerce company that has implement the credit card promotion over the last 6 month. Our company got its revenue through interchange fees, which comes at 2.4% per transaction.</p>
+          <p class="portofolio-text">The objective:
+          From the last 6 month promotion on RevoShop our company RevouBank are trying to understand the customer behaviour and additionally hoping to reduce the promotion cost.</p>
+          <p><img src="./assets/images/p31.png" alt="p31"></p>
+          <p class="portofolio-text"><b>Insight &Recommendation</b>
           </p>
-
-          <!-- <div class="btn-group">
-            <button class="btn btn-secondary">Hire me</button>
-
-            <button class="btn btn-primary">Download cv</button>
-          </div> -->
-
+          <ol class="portofolio-list1">
+          <li><b>Active Spender<ul>
+          <li>Targeted Messaging: Analyze the preferences and behavior patterns of this segment to create more personalized and relevant promotional messages. By delivering targeted messages, you can increase engagement and conversion rates, ultimately reducing costs associated with mass marketing campaigns.</li>
+          <li>Optimize Email Campaigns:  Segment your email lists to ensure that the right offers and promotions are sent to the appropriate audience. By refining your email targeting, you can minimize costs associated with sending emails to customers who are less likely to respond.</li>
+          </ul></b></li>
+          <li><b>Balanced User<ul>
+          <li>Adjust The Promotion:  While our average number of transactions and the amount are the highest of all cluster, our profit are the lowest. We can adjust the promotion by either increasing the minimum transaction amount of transaction to use the promo, or reduce the percentage, or limit the promo distribution.</li>
+          <li>Personalized Upselling:  Leverage personalized recommendations based on their spending history and preferences to upsell relevant products or services. This targeted approach can increase revenue from existingcustomers while minimizing costs related to broad upselling efforts.</li>
+          <li>Abandon the segmentation: Due to losing money on the average transaction, this cluster probably does not worth the investment and we can just drop the cluster. By doing this we can allocate our resources on the other segmentation.</li>
+          </ul></b></li>
+        </ol>
         </div>
-
-      
-
       </section>
-
     </article>
   </main>
-
-
-
-
 
   <!-- 
     - #FOOTER
   -->
+  
 
   <footer class="footer">
     <div class="container">
-
       <p class="h1 logo">
         <a href="#">
           Timoty<span>Sean</span>
         </a>
       </p>
-
     </div>
   </footer>
-
-
-
-
 
   <!-- 
     - #GO TO TOP
@@ -253,10 +123,6 @@
   <a href="#top" class="go-top" data-go-top title="Go to Top">
     <ion-icon name="arrow-up"></ion-icon>
   </a>
-
-
-
-
 
   <!-- 
     - custom js link
