--- a/porto-4.html
+++ b/porto-4.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portofolio 3</title>
+  <title>Portofolio 4</title>
 
   
   <!-- 
@@ -65,7 +65,7 @@
           <h2></h2>
         </div>
         <div class="hero-content">
-          <h2 class="h2 hero-title">Revobank Customer Analysis</h2>
+          <h2 class="h2 hero-title">Steam Games Data Analysis</h2>
           <a href="./index.html" class="btn btn-primary">BACK</a>
         </div>
       </section>
@@ -76,24 +76,24 @@
 
       <section class="portofolio" id="portofolio">
         <div class="portofolio-content">
-          <h1 class="h2">Revobank Customer Analysis</h1>
-          <h2 class="hinfo">Skillset: Python, Customer Segmentation</h2>
-          <p class="portofolio-list0">RevouBank is a bank that based in Europe. They provide a Credit Card that partnering with other company, and one them is RevoShop.</p>
-          <p class="portofolio-text">RevoShop is an ecommerce company that has implement the credit card promotion over the last 6 month. Our company got its revenue through interchange fees, which comes at 2.4% per transaction.</p>
-          <p class="portofolio-text">The objective:
-          From the last 6 month promotion on RevoShop our company RevouBank are trying to understand the customer behaviour and additionally hoping to reduce the promotion cost.</p>
-          <p><img src="./assets/images/p31.png" alt="p31"></p>
+          <h1 class="h2">Steam Games Data Analysis</h1>
+          <h2 class="hinfo">Skillset: Tableau, Data Visualization</h2>
+          <p class="portofolio-text">Steam is a video game digital distribution service and storefront developed by Valve Corporation. It was launched as a software client in September 2003 to provide game updates automatically for Valve's games, and expanded to distributing third-party titles in late 2005.</p>
+          <p class="portofolio-text">Objective from this project is to make a compact dashboard that answers CEO needs to see the trends based on current data.</p>
+          <p><img src="./assets/images/p41.png" alt="p41"></p>
           <p class="portofolio-text"><b>Insight &Recommendation</b>
           </p>
           <ol class="portofolio-list1">
-          <li><b>Active Spender<ul>
-          <li>Targeted Messaging: Analyze the preferences and behavior patterns of this segment to create more personalized and relevant promotional messages. By delivering targeted messages, you can increase engagement and conversion rates, ultimately reducing costs associated with mass marketing campaigns.</li>
-          <li>Optimize Email Campaigns:  Segment your email lists to ensure that the right offers and promotions are sent to the appropriate audience. By refining your email targeting, you can minimize costs associated with sending emails to customers who are less likely to respond.</li>
+          <li><b>Insight<ul>
+          <li>Based on Game genre, Indie Games are having the greatest edge in current period. There are many games registered as Indie games has been developed. But based on the sales of genres, Indie is not the leader. Single player, Adventure and Action has the bigger sales rather than Indie games. It Proven by the amount of sales of Adventure and Action that doubled  the Indie Games genre. ($5B and $4B than $2B)</li>
+          <li>Game sales based on the title also support our facts above  where Call of Duty Series, Resident Evil, Devil May Cry, are covered as action genre that has a high value of sales.</li>
+          <li>Leading Game based on playing hours are Dota 2, Counter Strike, Tom Clancy’s Rainbow Six, and the famous Grand Theft Auto V (GTA V) that counts as action, adventure is also supporting our previous findings where they are giving the highest sales and playing hours.</li>
+          <li>Price proven not to be a matter, it could be proven where the more expensive game such as Rust and Counter Strike: Global Offensive that are pricier than War Thunder and GTA V still has higher playing hours.</li>
+          <li>Overall trends based on sales and play hours is not having a high positive difference from previous months from 2011. But there is an interesting trend where in August of some years the hours and sales is rising (August of 2011, 2012, 2013, and 2018).</li>
           </ul></b></li>
-          <li><b>Balanced User<ul>
-          <li>Adjust The Promotion:  While our average number of transactions and the amount are the highest of all cluster, our profit are the lowest. We can adjust the promotion by either increasing the minimum transaction amount of transaction to use the promo, or reduce the percentage, or limit the promo distribution.</li>
-          <li>Personalized Upselling:  Leverage personalized recommendations based on their spending history and preferences to upsell relevant products or services. This targeted approach can increase revenue from existingcustomers while minimizing costs related to broad upselling efforts.</li>
-          <li>Abandon the segmentation: Due to losing money on the average transaction, this cluster probably does not worth the investment and we can just drop the cluster. By doing this we can allocate our resources on the other segmentation.</li>
+          <li><b>Recommendation<ul>
+          <li>Action, adventure, single player, are the genres has the biggest sales. But we also couldn’t ignore the Indie genre’s growth of development. We may need to release/collaborate a combination of these genres i.e. Indie - Adventure that published by a famous game developer so that we could cover wider spectrum of user.</li>
+          <li>We may want to create an extra engagement where we give an extra discount, promotions, or add-ons bundling such as game skin, suggesting limited edition characters in seasonal periods (Black Friday, Christmas, New Year, Thanksgiving, etc.) to increase sales, playing hours, and positive difference from previous month or year (%) so gradually year by year we could increase our growth.</li>
           </ul></b></li>
         </ol>
         </div>
