--- a/porto-5.html
+++ b/porto-5.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portofolio 3</title>
+  <title>Portofolio 5</title>
 
   
   <!-- 
@@ -65,7 +65,7 @@
           <h2></h2>
         </div>
         <div class="hero-content">
-          <h2 class="h2 hero-title">Revobank Customer Analysis</h2>
+          <h2 class="h2 hero-title">Liquor Sales Analysis in Iowa</h2>
           <a href="./index.html" class="btn btn-primary">BACK</a>
         </div>
       </section>
@@ -76,7 +76,7 @@
 
       <section class="portofolio" id="portofolio">
         <div class="portofolio-content">
-          <h1 class="h2">Revobank Customer Analysis</h1>
+          <h1 class="h2">Liquor Sales Analysis in Iowa</h1>
           <h2 class="hinfo">Skillset: Python, Customer Segmentation</h2>
           <p class="portofolio-list0">RevouBank is a bank that based in Europe. They provide a Credit Card that partnering with other company, and one them is RevoShop.</p>
           <p class="portofolio-text">RevoShop is an ecommerce company that has implement the credit card promotion over the last 6 month. Our company got its revenue through interchange fees, which comes at 2.4% per transaction.</p>
