--- a/porto-4.html
+++ b/porto-4.html
@@ -80,7 +80,7 @@
           <h2 class="hinfo">Skillset: Tableau, Data Visualization</h2>
           <p class="portofolio-text">Steam is a video game digital distribution service and storefront developed by Valve Corporation. It was launched as a software client in September 2003 to provide game updates automatically for Valve's games, and expanded to distributing third-party titles in late 2005.</p>
           <p class="portofolio-text">Objective from this project is to make a compact dashboard that answers CEO needs to see the trends based on current data.</p>
-          <p><img src="./assets/images/p41.png" alt="p41"></p>
+          <p><img src="./assets/images/p41.png" alt="p41" width="100%"></p>
           <p class="portofolio-text"><b>Insight &Recommendation</b>
           </p>
           <ol class="portofolio-list1">
