--- a/porto-5.html
+++ b/porto-5.html
@@ -77,12 +77,11 @@
       <section class="portofolio" id="portofolio">
         <div class="portofolio-content">
           <h1 class="h2">Liquor Sales Analysis in Iowa</h1>
-          <h2 class="hinfo">Skillset: Python, Customer Segmentation</h2>
-          <p class="portofolio-list0">RevouBank is a bank that based in Europe. They provide a Credit Card that partnering with other company, and one them is RevoShop.</p>
-          <p class="portofolio-text">RevoShop is an ecommerce company that has implement the credit card promotion over the last 6 month. Our company got its revenue through interchange fees, which comes at 2.4% per transaction.</p>
-          <p class="portofolio-text">The objective:
-          From the last 6 month promotion on RevoShop our company RevouBank are trying to understand the customer behaviour and additionally hoping to reduce the promotion cost.</p>
-          <p><img src="./assets/images/p31.png" alt="p31"></p>
+          <h2 class="hinfo">Skillset: Python, Tableau, SQL, Statistic, EDA</h2>
+          <p class="portofolio-list0">Mangmoty is a retail store specializing in the sale of liquor. Where its goal is to offer competitive prices and a wide variety of liquors.</p>
+          <p class="portofolio-text">Objective from this project is to determine most popular liquor brand and category in Iowa. This project also help Mangmoty decide which county in Iowa to open its branch in.</p>
+          <p><div class='tableauPlaceholder' id='viz1708266791040' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1_1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;DE&#47;DEPP-Semi_Final-Timoty_Sean&#47;Dashboard1_1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='DEPP-Semi_Final-Timoty_Sean&#47;Dashboard1_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;DE&#47;DEPP-Semi_Final-Timoty_Sean&#47;Dashboard1_1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1708266791040');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='1393px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script></p>
+          
           <p class="portofolio-text"><b>Insight &Recommendation</b>
           </p>
           <ol class="portofolio-list1">
